# snailtrail

./: .gitignore  AUTHORS  Cargo.toml  LICENSE-MIT  README.md
logformat/java/: build.sbt
logformat/java/src/main/java/criticalpath/: ActivityType.java  EventType.java  LogRecordPacker.java
logformat/rust/: Cargo.toml
logformat/rust/examples/: logcat.rs
logformat/rust/src/: lib.rs
pag-construction/: .gitignore  Cargo.toml  config_default.py  config_heron.py  matplotlibrc  requirements.txt  run_all_the_things.sh  run_benchmark.py  run_test.py
pag-construction/examples/: verify.rs
pag-construction/src/: dataflow.rs  input.rs  lib.rs  output.rs
snailtrail/: Cargo.toml
snailtrail/src/: lib.rs
snailtrail/src/exploration/: betweenness_centrality.rs  groupexplore.rs  mod.rs  single_path.rs
snailtrail/src/graph/: mod.rs
spark-parser/: Cargo.toml  INSTRUMENTATION.md  README.md
spark-parser/resources/: app-20170324182509-0000
spark-parser/src/: main.rs
tensorflow/: .gitignore  README.md  inspect_summary.py
tensorflow/tensorflow-parser/: Cargo.toml  INSTRUMENTATION.md  README.md  operators.json  timeline_to_json.sh
tensorflow/tensorflow-parser/src/: main.rs
