[package]
name = "pag-construction"
version = "0.1.0"

[dependencies]
abomonation = "0.4"
clap = "*"
time = "*"
timely = "^0.3"
timely_communication = "0.1.8"
logformat = { version = "0.1.0", path = "../logformat/rust" }
snailtrail = { version = "0.1.0", path = "../snailtrail" }
abomonation_derive = "0.2.3"
rand = "*"
rayon = "^0.9.0"
svg = "^0.5.7"
