[package]
name = "logformat"
version = "0.2.0"
edition = "2018"
description = "definitions for data types used to serialize raw traces"

[dependencies]
rmp = "^0.8"
enum-primitive-derive = "^0.1"
num-traits = "^0.2"
abomonation = "0.7"
abomonation_derive = "0.3"
# @TODO: replace with serde
json = "0.11.12"
clap = "^2.32"

[dev-dependencies]
rmp-serde = "^0.13"
quick-protobuf = "^0.6"
serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# protobuf = "1.4.3" necessary?
byteorder = "^1.2"
